--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "render-build": "npm install && npm run build",
     "start": "node server.js",
     "server:dev": "node --watch server.js"
   },
